ajout de index 3

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>projet stage</title>
 </head>
 <body>
-    <h1> Bonjour MR.Ayoub !</h1>
+    <h1> Bonjour MR.ANIS !</h1>
 </body>
 </html>
